@@ -7,6 +7,7 @@
     left-click in toolbar config menu shows design menu
     fix Open|Default with multiple dirs selected
     gtk3 leaving beta; gtk3 debian package; ppa add spacefm-gtk3
+    navigation/activation keys on desktop #247
 0.8.4   2012-12-21:
     fix detail dbl click selects next #218
     fix dlg command pipe fast
